--- a/index.css
+++ b/index.css
@@ -2,7 +2,17 @@ html{
     background: linear-gradient(to right, rgb(198, 255, 221), rgb(251, 215, 134), rgb(247, 121, 125));"
 }
 
+body{
+    height: 100vh;
+}
+
 .imagem{
     background-repeat: no-repeat;
+    background-size: cover;
 
+}
+
+.contador{
+    width: 100%;
+    text-align: center;
 }
